# alist-bore-test

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  service.rs
